--- a/notebooks/Twitch Data Analysis.ipynb
+++ b/notebooks/Twitch Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,29 +142,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "A, X, y, idx_train, idx_val, idx_test = load_data(\"../data/twitch/\", \"musae_ENGB_\", 1000, 2000, 3000, False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_test(A, X, y, idx_train, idx_val, idx_test,\n",
-    "    no_cuda = False,\n",
-    "    seed = 40,\n",
-    "    epochs = 200,\n",
-    "    learning_rate = 0.0001,\n",
-    "    weight_decay = 5e-4,\n",
-    "    hidden_units = 256,\n",
-    "    dropout = 0.5,\n",
-    "    type = \"FCN\")"
+    "Epoch: 0190 loss_train: 0.6347 acc_train: 0.6420 loss_val: 0.7088 acc_val: 0.5095 time: 0.0045s\n",
+    "\n",
+    "Epoch: 0200 loss_train: 0.6377 acc_train: 0.6420 loss_val: 0.7098 acc_val: 0.5095 time: 0.0030s\n",
+    "\n",
+    "Optimization Finished!\n",
+    "Total time elapsed: 0.6197s\n",
+    "Test set results: loss= 0.7161 accuracy= 0.5093"
    ]
   },
   {
