finished node2vec on graph and features only

--- a/notebooks/CORA Data Analysis.ipynb
+++ b/notebooks/CORA Data Analysis.ipynb
@@ -34,14 +34,14 @@
    "source": [
     "# Preface\n",
     "\n",
-    "This dataset involves predicting if streamers on Twitch are explicit or not. There is a network of friends as well as the views, partner status, and age of account."
+    "This dataset involves predicting what category scientific papers fall into. There is a network of papers as well as the words used in the title."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load Twitch Data"
+    "## Load CORA Data"
    ]
   },
   {
